# burgers_dynamic

./: CMakeLists.txt  README.rst
Fortran/: CMakeLists.txt
src/fortran/: CMakeLists.txt  burgers_dynamic.F90  visualiseBurgersDynamic.cmgui
src/fortran/expected_results/: MainTime_0.part0.exnode  MainTime_1.part0.exnode  burgers_dynamic.part0.exnode
src/fortran/expected_results/output/: MainTime_0.part0.exelem  MainTime_0.part0.exnode  MainTime_1.part0.exnode  MainTime_2.part0.exnode  MainTime_3.part0.exnode  MainTime_4.part0.exnode
src/fortran/output/: MainTime_2.part0.exnode  MainTime_3.part0.exnode
